# reanimator-replayer

./: .gitignore  .reviewboardrc  CMakeLists.txt  README.md  build-syscall-replayer.sh  mt.ds  output.ds  output_lsR.ds  strace_out.ds  sys-call-todo-list.txt  test.fio  thread_trace.ds
concept-implementations/: cv.cpp
converters/: .gitignore  FieldSpace.cpp  FieldSpace.hpp  Makefile  README  TODO  blktrace2ds.sh  csv2ds-extra.cpp  generate-xml.sh  mpst2ds.sh  nfsgpfsstripped2csv.awk  nfsgpfsstripped2ds.sh  nfsparse.cpp  nfstrace2ds.sh  pre-processor.cpp  spc2ds.sh  strace2ds.sh  systrace2ds.sh  vss2ds.sh
docs/: TraceRecordReplayPresentationOutline.docx  ibm-collaboration.txt  io-stack-illustration.fig
ds-examples/: Makefile  ds-simple-read.C  ds-simple-write.C  extract-snia-nfs-write.cpp  fork-fd-test.c  my_test.txt  nfsstat.cpp  readtest.c  testMergedCode.cpp
ds_test/: untar.log1  untar.log2x  untar.log3
dsblk-replayer/: Commander.cpp  Commander.hpp  Makefile  ReplayModule.cpp  ReplayStats.cpp  ReplayStats.hpp  TODO  aio_sync_flag.h  dsblkreplay  dsblkreplay.config~
dsblkreplay-example-run/: README  async-iostat-result.txt  async-replay-result.txt  dsblkreplay.config  sync-iostat-result.txt  sync-replay-result.txt
include/: AnalysisModule.hpp  CloneSystemCallTraceReplayModule.hpp  CorrelationAnalysisModule.hpp  DurationAnalysisModule.hpp  EPollCreateSystemCallTraceReplayModule.hpp  FTruncateSystemCallTraceReplayModule.hpp  FallocateSystemCallTraceReplayModule.hpp  LinkSystemCallTraceReplayModule.hpp  MknodSystemCallTraceReplayModule.hpp  NumericalAnalysisModule.hpp  ReadSystemCallAnalysisModule.hpp  ReadSystemCallTraceReplayModule.hpp  ReadaheadSystemCallTraceReplayModule.hpp  SyscallCountAnalysisModule.hpp  SystemCallTraceReplayModule.hpp  SystemCallTraceReplayer.hpp  ThreadWiseDurationAnalysisModule.hpp  UmaskSystemCallTraceReplayModule.hpp  WriteSystemCallTraceReplayModule.hpp
matrix2/: .gitignore  Makefile  README  dsLoadMatrix.cpp  dsMultiExtentTypeRead.cpp  feature_matrix.c  feature_matrix.h  feature_matrix_iterator.c  feature_matrix_iterator.h  feature_matrix_utils.c  feature_matrix_utils.h  fun_with_sqlite.c  iterate_client.c  load_client.c
microbenchmarks/: read-1-thread-randomtest.c  read-1-thread-sequentialtest.c  read-n-thread-randomtest.c  read-n-thread-sequential.c  write-n-thread-random.c  write-n-thread-sequential.c
old_files/: README.old
patches/: blkparse-to-short-file-name.diff  cvar-and-offset.diff  cvar_demo.f  diff-filebench-fast-start-shutdown.diff  kernel-3.2.1-aio-SYNC-flag-propagation.diff  sample.sdf
replayer/: Commander.cpp  Commander.hpp  Makefile  README  ReplayModule.cpp  ReplayStats.cpp  ReplayStats.hpp  TODO  aio_sync_flag.h
replayer-tests/: Makefile  close-test-prog.cpp  creat-test.c  getdents-test.c  link-test.c  open-test-prog.cpp  system-call-test.sh  unlink-test.c
src/: AnalysisModule.cpp  BasicStatSystemCallTraceReplayModule.cpp  CMakeLists.txt  ChmodSystemCallTraceReplayModule.cpp  CreatSystemCallTraceReplayModule.cpp  DurationAnalysisModule.cpp  FallocateSystemCallTraceReplayModule.cpp  NumericalAnalysisModule.cpp  ReadSystemCallAnalysisModule.cpp  ReadSystemCallTraceReplayModule.cpp  ReadaheadSystemCallTraceReplayModule.cpp  RenameSystemCallTraceReplayModule.cpp  ReplayerResourcesManager.cpp  SetRLimitSystemCallTraceReplayModule.cpp  SocketPairSystemCallTraceReplayModule.cpp  SyscallCountAnalysisModule.cpp  SystemCallTraceReplayModule.cpp  SystemCallTraceReplayer.cpp  UmaskSystemCallTraceReplayModule.cpp  VirtualAddressSpace.cpp  WritevSystemCallTraceReplayModule.cpp
src/analysis/: .CorrelationAnalysisModule.cpp.swp  CMakeLists.txt  CorrelationAnalysisModule.cpp  DurationAnalysisModule.cpp  NumericalAnalysisModule.cpp  ThreadWiseDurationAnalysisModule.cpp
src/syscalls/: Accept4SystemCallTraceReplayModule.cpp  CMakeLists.txt  CloneSystemCallTraceReplayModule.cpp  DupSystemCallTraceReplayModule.cpp  FsyncSystemCallTraceReplayModule.cpp  GetRLimitSystemCallTraceReplayModule.cpp  MunmapSystemCallTraceReplayModule.cpp  OpenSystemCallTraceReplayModule.cpp  ReadSystemCallTraceReplayModule.cpp  VForkSystemCallTraceReplayModule.cpp  WriteSystemCallTraceReplayModule.cpp
src/tags/: dataseries  onetbb  ra  ra-lib
strace2ds-converter/: FieldSpace.cpp  strace2ds.cpp~  strace2ds.h  strace2ds.h~
strace2ds-library/: DataSeriesOutputModule.cpp  DataSeriesOutputModule.cpp~  DataSeriesOutputModule.hpp  MakeAccept4ArgsMap.cpp  MakeAcceptArgsMap.cpp  MakeAccessArgsMap.cpp  MakeBindArgsMap.cpp  MakeChdirArgsMap.cpp  MakeChmodArgsMap.cpp  MakeChownArgsMap.cpp  MakeChrootArgsMap.cpp  MakeCloneArgsMap.cpp  MakeCloseArgsMap.cpp  MakeConnectArgsMap.cpp  MakeCreatArgsMap.cpp  MakeDup2ArgsMap.cpp  MakeDup3ArgsMap.cpp  MakeDupArgsMap.cpp  MakeEpollCreate1ArgsMap.cpp  MakeEpollCreateArgsMap.cpp  MakeExecveArgsMap.cpp  MakeExitArgsMap.cpp  MakeFAccessAtArgsMap.cpp  MakeFChdirArgsMap.cpp  MakeFChmodArgsMap.cpp  MakeFChmodAtArgsMap.cpp  MakeFGetxAttrArgsMap.cpp  MakeFListxAttrArgsMap.cpp  MakeFLockArgsMap.cpp  MakeFRemovexAttrArgsMap.cpp  MakeFSetxAttrArgsMap.cpp  MakeFStatArgsMap.cpp  MakeFStatatArgsMap.cpp  MakeFStatfsArgsMap.cpp  MakeFTruncateArgsMap.cpp  MakeFallocateArgsMap.cpp  MakeFcntlArgsMap.cpp  MakeFdatasyncArgsMap.cpp  MakeFsyncArgsMap.cpp  MakeGetdentsArgsMap.cpp  (+78 more)
strace2ds-library/specstrings/: strace.spec
strace2ds-library/tables/: Makefile  OLD-gen-enums.sh  gen-enums.sh  gen-xml-enums.pl  snia_syscall_fields.src  snia_syscall_fields.table  table-getdents
strace2ds-library/xml/: access.xml  chdir.xml  chmod.xml  chown.xml  clone.xml  close.xml  creat.xml  dup.xml  dup2.xml  execve.xml  exit.xml  faccessat.xml  fchmod.xml  fchmodat.xml  fcntl.xml  fgetxattr.xml  flistxattr.xml  flock.xml  fork.xml  fremovexattr.xml  fsetxattr.xml  fstat.xml  fstatat.xml  fstatfs.xml  fsync.xml  ftruncate.xml  getdents.xml  getrlimit.xml  getxattr.xml  ioctl.xml  lgetxattr.xml  link.xml  linkat.xml  listxattr.xml  llistxattr.xml  lremovexattr.xml  lseek.xml  lsetxattr.xml  lstat.xml  mkdir.xml  (+35 more)
syscall-converter/: FieldSpace.cpp  (+6 more)
(+267 files in other folders)
