ACLOCAL_AMFLAGS = -I m4
lib_LTLIBRARIES = libstrace2ds.la
libstrace2ds_la_SOURCES = DataSeriesOutputModule.cpp 	\
			  MakeCloseArgsMap.cpp       	\
			  MakeOpenArgsMap.cpp        	\
			  MakeOpenAtArgsMap.cpp      	\
			  MakeReadArgsMap.cpp        	\
			  MakeWriteArgsMap.cpp       	\
			  MakeChdirArgsMap.cpp       	\
			  MakeRmdirArgsMap.cpp       	\
			  MakeUnlinkArgsMap.cpp      	\
			  MakeUnlinkAtArgsMap.cpp    	\
			  MakeMkdirArgsMap.cpp       	\
			  MakeMkdirAtArgsMap.cpp     	\
			  MakeCreatArgsMap.cpp       	\
			  MakeChmodArgsMap.cpp       	\
			  MakeUmaskArgsMap.cpp       	\
			  MakeSetxAttrArgsMap.cpp    	\
			  MakeLSetxAttrArgsMap.cpp   	\
			  MakeGetxAttrArgsMap.cpp    	\
			  MakeLGetxAttrArgsMap.cpp   	\
			  MakeFSetxAttrArgsMap.cpp   	\
			  MakeFGetxAttrArgsMap.cpp   	\
			  MakeListxAttrArgsMap.cpp   	\
			  MakeLListxAttrArgsMap.cpp  	\
			  MakeFListxAttrArgsMap.cpp  	\
			  MakeFLockArgsMap.cpp       	\
			  MakeRemovexAttrArgsMap.cpp 	\
			  MakeLRemovexAttrArgsMap.cpp	\
			  MakeFRemovexAttrArgsMap.cpp   \
			  MakeFChmodArgsMap.cpp         \
			  MakeFChmodAtArgsMap.cpp       \
			  MakeLinkArgsMap.cpp           \
			  MakeLinkAtArgsMap.cpp         \
			  MakeSymLinkArgsMap.cpp        \
			  MakeSymlinkAtArgsMap.cpp      \
			  MakeTruncateArgsMap.cpp       \
			  MakeAccessArgsMap.cpp         \
			  MakeFAccessAtArgsMap.cpp      \
			  MakeLSeekArgsMap.cpp          \
			  MakePReadArgsMap.cpp          \
			  MakePWriteArgsMap.cpp         \
			  MakeSetpgidArgsMap.cpp        \
			  MakeSetrlimitArgsMap.cpp      \
			  MakeSetsidArgsMap.cpp         \
			  MakeStatArgsMap.cpp 		\
			  MakeStatfsArgsMap.cpp 	\
			  MakeFStatfsArgsMap.cpp	\
	 		  MakeFTruncateArgsMap.cpp 	\
			  MakeChownArgsMap.cpp 		\
			  MakeReadlinkArgsMap.cpp 	\
			  MakeReadvArgsMap.cpp 		\
			  MakeWritevArgsMap.cpp 	\
			  MakeUtimeArgsMap.cpp 		\
			  MakeLStatArgsMap.cpp		\
			  MakeFStatArgsMap.cpp		\
			  MakeFStatatArgsMap.cpp	\
			  MakeUtimesArgsMap.cpp		\
			  MakeUtimesatArgsMap.cpp	\
			  MakeRenameArgsMap.cpp		\
			  MakeFsyncArgsMap.cpp		\
			  MakeMknodArgsMap.cpp		\
			  MakeMknodatArgsMap.cpp	\
			  MakePipeArgsMap.cpp		\
			  MakeDupArgsMap.cpp		\
			  MakeDup2ArgsMap.cpp		\
			  MakeFcntlArgsMap.cpp		\
			  MakeExitArgsMap.cpp		\
			  MakeExecveArgsMap.cpp		\
			  MakeMmapArgsMap.cpp		\
			  MakeUnmapArgsMap.cpp		\
			  MakeGetdentsArgsMap.cpp	\
			  MakeGetrlimitArgsMap.cpp	\
			  MakeIoctlArgsMap.cpp		\
			  MakeCloneArgsMap.cpp		\
			  MakeVForkArgsMap.cpp		\
			  MakeSocketArgsMap.cpp		\
			  MakeConnectArgsMap.cpp	\
			  MakeBindArgsMap.cpp		\
			  MakeAcceptArgsMap.cpp		\
			  MakeGetpeernameArgsMap.cpp    \
			  MakeGetsocknameArgsMap.cpp    \
			  MakeListenArgsMap.cpp		\
			  MakeShutdownArgsMap.cpp	\
			  MakeGetsockoptArgsMap.cpp	\
			  MakeSetsockoptArgsMap.cpp	\
			  MakeSocketpairArgsMap.cpp	\
			  MakeRecvArgsMap.cpp		\
			  MakeRecvfromArgsMap.cpp	\
			  MakeRecvmsgArgsMap.cpp	\
			  MakeSendArgsMap.cpp		\
			  MakeSendtoArgsMap.cpp		\
			  MakeSendmsgArgsMap.cpp	\
			  strace2ds.cpp

include_HEADERS = strace2ds.h
noinst_HEADERS = DataSeriesOutputModule.hpp

SNIA_SYSCALL_FIELDS_TABLE_FILE=tables/snia_syscall_fields.table
XML_FILES=			\
	xml/access.xml		\
	xml/chdir.xml		\
	xml/chmod.xml		\
	xml/chown.xml		\
	xml/close.xml		\
	xml/creat.xml		\
	xml/dup.xml		\
	xml/dup2.xml		\
	xml/execve.xml		\
	xml/fcntl.xml		\
	xml/fork.xml		\
	xml/fstat.xml		\
	xml/fsync.xml		\
	xml/ioctl.xml		\
	xml/link.xml		\
	xml/lseek.xml		\
	xml/lstat.xml		\
	xml/mkdir.xml		\
	xml/mknod.xml		\
	xml/mmap.xml		\
	xml/munmap.xml		\
	xml/open.xml		\
	xml/pipe.xml		\
	xml/pread.xml		\
	xml/pwrite.xml		\
	xml/read.xml		\
	xml/readlink.xml	\
	xml/readv.xml		\
	xml/rename.xml		\
	xml/rmdir.xml		\
	xml/stat.xml		\
	xml/symlink.xml		\
	xml/truncate.xml	\
	xml/unlink.xml		\
	xml/utime.xml		\
	xml/utimes.xml		\
	xml/write.xml		\
	xml/writev.xml		\
	xml/clone.xml		\
	xml/exit.xml		\
	xml/fchmod.xml		\
	xml/fchmodat.xml	\
	xml/flock.xml		\
	xml/fstatfs.xml		\
	xml/getdents.xml	\
	xml/linkat.xml		\
	xml/mkdirat.xml		\
	xml/openat.xml		\
	xml/statfs.xml		\
	xml/unlinkat.xml	\
	xml/utimensat.xml	\
	xml/vfork.xml		\
	xml/faccessat.xml	\
	xml/fgetxattr.xml	\
	xml/flistxattr.xml	\
	xml/fremovexattr.xml	\
	xml/fsetxattr.xml	\
	xml/fstatat.xml		\
	xml/ftruncate.xml	\
	xml/getrlimit.xml	\
	xml/getxattr.xml	\
	xml/lgetxattr.xml	\
	xml/listxattr.xml	\
	xml/llistxattr.xml	\
	xml/lremovexattr.xml	\
	xml/lsetxattr.xml	\
	xml/mknodat.xml		\
	xml/removexattr.xml	\
	xml/setpgid.xml		\
	xml/setrlimit.xml	\
	xml/setsid.xml		\
	xml/setxattr.xml	\
	xml/symlinkat.xml	\
	xml/umask.xml		\
	xml/socket.xml		\
	xml/connect.xml		\
	xml/bind.xml		\
	xml/listen.xml		\
	xml/accept.xml		\
	xml/getsockname.xml     \
	xml/getpeername.xml	\
	xml/shutdown.xml	\
	xml/getsockopt.xml	\
	xml/setsockopt.xml	\
	xml/socketpair.xml	\
	xml/recv.xml		\
	xml/recvfrom.xml	\
	xml/recvmsg.xml		\
	xml/send.xml		\
	xml/sendto.xml		\
	xml/sendmsg.xml


EXTRA_DIST=$(SNIA_SYSCALL_FIELDS_TABLE_FILE) $(XML_FILES) buildall
tablesdir = $(prefix)/tables
tables_DATA = $(SNIA_SYSCALL_FIELDS_TABLE_FILE)
xmldir = $(prefix)/xml
xml_DATA = $(XML_FILES)
