add_library(syscalls
	OpenSystemCallTraceReplayModule.cpp
	CloseSystemCallTraceReplayModule.cpp
	ReadSystemCallTraceReplayModule.cpp
	WriteSystemCallTraceReplayModule.cpp
	LSeekSystemCallTraceReplayModule.cpp
	TruncateSystemCallTraceReplayModule.cpp
	AccessSystemCallTraceReplayModule.cpp
	UnlinkSystemCallTraceReplayModule.cpp
	RmdirSystemCallTraceReplayModule.cpp
	LinkSystemCallTraceReplayModule.cpp
	CreatSystemCallTraceReplayModule.cpp
	ChdirSystemCallTraceReplayModule.cpp
	FChdirSystemCallTraceReplayModule.cpp
	ChrootSystemCallTraceReplayModule.cpp
	SymlinkSystemCallTraceReplayModule.cpp
	MkdirSystemCallTraceReplayModule.cpp
	BasicStatSystemCallTraceReplayModule.cpp
	BasicStatfsSystemCallTraceReplayModule.cpp
	ReadlinkSystemCallTraceReplayModule.cpp
	UtimeSystemCallTraceReplayModule.cpp
	ChmodSystemCallTraceReplayModule.cpp
	ChownSystemCallTraceReplayModule.cpp
	ReadvSystemCallTraceReplayModule.cpp
	WritevSystemCallTraceReplayModule.cpp
	RenameSystemCallTraceReplayModule.cpp
	FsyncSystemCallTraceReplayModule.cpp
	FdatasyncSystemCallTraceReplayModule.cpp
	FallocateSystemCallTraceReplayModule.cpp
	ReadaheadSystemCallTraceReplayModule.cpp
	MknodSystemCallTraceReplayModule.cpp
	PipeSystemCallTraceReplayModule.cpp
	DupSystemCallTraceReplayModule.cpp
	Dup2SystemCallTraceReplayModule.cpp
	Dup3SystemCallTraceReplayModule.cpp
	ExitSystemCallTraceReplayModule.cpp
	ExecveSystemCallTraceReplayModule.cpp
	MmapSystemCallTraceReplayModule.cpp
	MunmapSystemCallTraceReplayModule.cpp
	FcntlSystemCallTraceReplayModule.cpp
	ExitSystemCallTraceReplayModule.cpp
	GetdentsSystemCallTraceReplayModule.cpp
	IoctlSystemCallTraceReplayModule.cpp
	FChmodSystemCallTraceReplayModule.cpp
	CloneSystemCallTraceReplayModule.cpp
	VForkSystemCallTraceReplayModule.cpp
	UmaskSystemCallTraceReplayModule.cpp
	FTruncateSystemCallTraceReplayModule.cpp
	SetxattrSystemCallTraceReplayModule.cpp
	SocketSystemCallTraceReplayModule.cpp
	SocketPairSystemCallTraceReplayModule.cpp
	AcceptSystemCallTraceReplayModule.cpp
	Accept4SystemCallTraceReplayModule.cpp
	EPollCreateSystemCallTraceReplayModule.cpp)