add_library(syscalls
	Accept4SystemCallTraceReplayModule.cpp
	AcceptSystemCallTraceReplayModule.cpp
	AccessSystemCallTraceReplayModule.cpp
	BasicStatSystemCallTraceReplayModule.cpp
	BasicStatfsSystemCallTraceReplayModule.cpp
	ChdirSystemCallTraceReplayModule.cpp
	ChmodSystemCallTraceReplayModule.cpp
	ChownSystemCallTraceReplayModule.cpp
	ChrootSystemCallTraceReplayModule.cpp
	CloneSystemCallTraceReplayModule.cpp
	CloseSystemCallTraceReplayModule.cpp
	CreatSystemCallTraceReplayModule.cpp
	Dup2SystemCallTraceReplayModule.cpp
	Dup3SystemCallTraceReplayModule.cpp
	DupSystemCallTraceReplayModule.cpp
	EPollCreateSystemCallTraceReplayModule.cpp
	ExecveSystemCallTraceReplayModule.cpp
	ExitSystemCallTraceReplayModule.cpp
	ExitSystemCallTraceReplayModule.cpp
	FChdirSystemCallTraceReplayModule.cpp
	FChmodSystemCallTraceReplayModule.cpp
	FTruncateSystemCallTraceReplayModule.cpp
	FallocateSystemCallTraceReplayModule.cpp
	FcntlSystemCallTraceReplayModule.cpp
	FdatasyncSystemCallTraceReplayModule.cpp
	FsyncSystemCallTraceReplayModule.cpp
	GetdentsSystemCallTraceReplayModule.cpp
	IoctlSystemCallTraceReplayModule.cpp
	LSeekSystemCallTraceReplayModule.cpp
	LinkSystemCallTraceReplayModule.cpp
	MkdirSystemCallTraceReplayModule.cpp
	MknodSystemCallTraceReplayModule.cpp
	MmapSystemCallTraceReplayModule.cpp
	MunmapSystemCallTraceReplayModule.cpp
	OpenSystemCallTraceReplayModule.cpp
	PipeSystemCallTraceReplayModule.cpp
	ReadSystemCallTraceReplayModule.cpp
	ReadaheadSystemCallTraceReplayModule.cpp
	ReadlinkSystemCallTraceReplayModule.cpp
	ReadvSystemCallTraceReplayModule.cpp
	RenameSystemCallTraceReplayModule.cpp
	RmdirSystemCallTraceReplayModule.cpp
	SetxattrSystemCallTraceReplayModule.cpp
	SocketPairSystemCallTraceReplayModule.cpp
	SocketSystemCallTraceReplayModule.cpp
	SymlinkSystemCallTraceReplayModule.cpp
	TruncateSystemCallTraceReplayModule.cpp
	UmaskSystemCallTraceReplayModule.cpp
	UnlinkSystemCallTraceReplayModule.cpp
	UtimeSystemCallTraceReplayModule.cpp
	VForkSystemCallTraceReplayModule.cpp
	WriteSystemCallTraceReplayModule.cpp
	WritevSystemCallTraceReplayModule.cpp
)